@@ -1,3 +1,8 @@
+BOARD18 2.7.2 Release Notes
+ 
+Changes from 2.7.1 Release:
+Implemented fix for Issue 194 - Field size discrepancy in board18Boxes.php 
+
 BOARD18 2.7.1 Release Notes
  
 Changes from 2.7.0 Release:
